--- a/a.html
+++ b/a.html
@@ -1,5 +1,5 @@
 <head>
-<link rel="stylesheet" href="akshit.css">
+<link rel="stylesheet" href="a.css">
 </head>
 <body style="background-color:red">
 	<H1 text-align="center"> Welcome to the Quiz<br><br>
